# courswork4

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: get_vacancies.py  hh_api.py  json_saver.py  utils.py  vacancies.py  vacancy.py
