[tool.poetry]
name = "course_work4"
version = "0.1.0"
description = ""
authors = ["Paul Sergeevich <p.bitiakov.official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
